# MTools

./: .gitignore  README.md  build.py  flet_build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: build_guide.md  release_guide.md
extensions/flet-gpt-markdown/: pyproject.toml
extensions/flet-gpt-markdown/src/flutter/flet_gpt_markdown/lib/src/: flet_gpt_markdown.dart
scripts/: prepare_cuda_variant.py
src/: main.py
src/components/: custom_title_bar.py  feature_card.py  tool_search.py
src/constants/: app_config.py  model_config.py
src/services/: __init__.py  audio_service.py  auto_updater.py  config_service.py  ffmpeg_service.py  frame_interpolation_service.py  global_hotkey_service.py  icp_service.py  speech_recognition_service.py  subtitle_remove_service.py  update_service.py  vocal_separation_service.py
src/utils/: __init__.py  file_utils.py  logger.py  onnx_helper.py  patch.py  platform_utils.py
src/views/: main_view.py  recommendations_view.py  settings_view.py
src/views/dev_tools/: base64_to_image_view.py  color_tool_view.py  cron_tool_view.py  crypto_tool_view.py  dev_tools_view.py  dns_lookup_view.py  encoder_decoder_view.py  encoding_convert_view.py  format_convert_view.py  http_client_view.py  json_viewer_view.py  jwt_tool_view.py  markdown_viewer_view.py  port_scanner_view.py  regex_tester_view.py  sql_formatter_view.py  text_diff_view.py  timestamp_tool_view.py  uuid_generator_view.py  websocket_client_view.py
src/views/image/: background_view.py  border_view.py  color_space_view.py  compress_view.py  crop_view.py  enhance_view.py  format_view.py  gif_adjustment_view.py  image_view.py  info_view.py  ocr_view.py  qrcode_view.py  remove_exif_view.py  resize_view.py  rotate_view.py  search_view.py  to_base64_view.py  watermark_remove_view.py  watermark_view.py
src/views/image/puzzle/: merge_view.py  split_view.py
src/views/media/: audio_compress_view.py  audio_format_view.py  audio_speed_view.py  audio_to_text_view.py  ffmpeg_install_view.py  media_view.py  screen_record_view.py  subtitle_convert_view.py  subtitle_remove_view.py  ts_merge_view.py  video_compress_view.py  video_convert_view.py  video_enhance_view.py  video_extract_audio_view.py  video_interpolation_view.py  video_repair_view.py  video_speed_view.py  video_subtitle_view.py  video_vocal_separation_view.py  video_watermark_view.py  vocal_extraction_view.py
src/views/others/: file_to_url_view.py  icp_query_view.py  id_photo_view.py  image_to_url_view.py  others_view.py  translate_view.py  windows_update_view.py
