[project]
name = "MTools"
version = "0.0.15-beta"
description = "Multi-functional desktop application with media processing, encoding conversion, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    { name = "MTools Developer", email = "1790233968@qq.com" }
]
# Don't hard-code the version, to avoid flet compilation issues.
dependencies = [
  "flet==0.84.0",
  "ffmpeg-python==0.2.0",
  "Pillow==12.0.0",
  "chardet==5.2.0",
  "opencv-python-headless==4.11.0.86",
  "numpy==1.26.4",
  # ONNX Runtime - Windows 用 DirectML (GPU), 其他平台用 CPU
  # CUDA 构建时由 prepare_cuda_variant.py 替换为 onnxruntime-gpu
  "onnxruntime-directml>=1.23.0 ; sys_platform == 'win32'",
  "onnxruntime>=1.23.0 ; sys_platform != 'win32'",
  "websockets==12.0", # 避免弃用警告，等待 flet 更新
  "qrcode[pil]==7.4.2",
  "sherpa-onnx==1.12.35",
  "pyclipper==1.4.0",
  "shapely==2.1.2",
  "httpx[socks]==0.28.1",
  "dnspython==2.8.0",
  "PyYAML==6.0.2",
  "xmltodict==0.14.2",
  "pycryptodome==3.21.0",
  "sqlparse==0.5.3",
  "croniter==5.0.1",
  "tomli-w==1.1.0",
  "pystray==0.19.5",
  "psutil==6.1.1", # 系统和进程工具（用于自动更新）
  "pywin32>=311 ; sys_platform == 'win32'", # Windows 专用
  "wmi>=1.5.1 ; sys_platform == 'win32'",
  "pyobjc-framework-Cocoa==12.1 ; sys_platform == 'darwin'", # macOS 屏幕区域选择
  "pyobjc-framework-Quartz==12.1 ; sys_platform == 'darwin'",
  "pynput>=1.7.7 ; sys_platform == 'darwin'", # macOS 全局热键
  "flet-dropzone==0.3.1", # 原生拖放支持（需要 flet build）
  "cryptography>=44.0.0", # 配置加密存储（flet.security 依赖）
  "flet-gpt-markdown",
]

[tool.uv.sources]
flet-gpt-markdown = { path = "extensions/flet-gpt-markdown", editable = true }

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.hgha"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "MTools"

# company name to display in about app dialogs
company = "MTools"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MTools Developer"

[tool.flet.app]
path = "src"

[dependency-groups]
dev = [
    "flet[all]==0.84.0",
    "flet-desktop==0.84.0",
    "flet-cli==0.84.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.84.0"}

[tool.uv]
find-links = ["https://k2-fsa.github.io/sherpa/onnx/cuda.html"]
