[project]
name = "flet-gpt-markdown"
version = "0.1.0"
description = "FletGptMarkdown control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.84.0",
]

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://mydomain.dev"

[tool.setuptools.package-data]
"flutter.flet_gpt_markdown" = ["**/*"]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
